# jotter

./: Cargo.toml  README.md  TODO.txt  config-default.toml  example-config.toml  flake.nix
src/: bin.rs  lib.rs
src/cli/: add.rs  ls.rs  mod.rs  utils.rs
src/command/: mod.rs
src/database/sqlite/: mod.rs  utils.rs
src/executor/sqlite/: mod.rs
src/frontend/cli/: add.rs  input.rs  ls.rs  mod.rs  open.rs  output.rs  progress.rs  show.rs  update.rs
src/lib/: lib.rs
src/mw/: mod.rs  utils.rs
src/mw/config/: default.rs  mod.rs
src/mw/db/: mod.rs
src/mw/task/: mod.rs
src/mw/ui/: mod.rs
src/task/: mod.rs
src/time/: mod.rs
src/utils/: mod.rs
tests/: cli-test.rs
