[package]
name = "budget-jira"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bjl"
path = "src/lib.rs"

[[bin]]
name = "budget_jira"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.39"
clap = "4.5.23"
rusqlite = {version = "0.32.1", features = ["chrono"]}
strum = "0.26.3"
strum_macros = "0.26.4"
