[package]
name = "jotter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bjl"
path = "src/lib.rs"

[[bin]]
name = "jotter"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.39"
clap = "4.5.23"
dirs = "6.0.0"
dotenv = "0.15.0"
rand = "0.9.0"
rusqlite = {version = "0.32.1", features = ["chrono"]}
strum = "0.26.3"
strum_macros = "0.26.4"
