[package]
name = "jotter"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bjl"
path = "src/lib.rs"

[[bin]]
name = "jotter"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.39"
clap = "4.5.23"
config = {version = "0.15.13", features = ["toml"]}
dirs = "6.0.0"
regex = "1.11.1"
rusqlite = {version = "0.32.1", features = ["chrono"]}
serde = "1.0.219"
serde-with-expand-env = "1.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
termimad = "0.31.2"
toml = {version = "0.9.5", features = ["serde"]}
